# GitLog

./: .gitignore  .gitlog.toml.example  CHANGELOG.md  GITHUB_RELEASE_DRAFT.md  LICENSE  PYPI_UPLOAD_LOG.txt  README-zh.md  README-zh_CN.md  README.md  RELEASE_NOTES_v0.1.0.md  pyproject.toml  release_pr.md
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  social_templates.md
src/gitlog/: __init__.py  cli.py  config.py  exceptions.py
src/gitlog/core/: __init__.py  classifier.py  generator.py  git.py  models.py
src/gitlog/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
src/gitlog/renderers/: __init__.py  html.py  json.py  markdown.py  twitter.py
src/gitlog/templates/: changelog.md.j2  release_notes.md.j2  report.html.j2
tests/: conftest.py  test_classifier.py  test_generator.py  test_git.py  test_renderers.py
tests/fixtures/: sample_commits.py
