[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitlog"
version = "0.1.0"
description = "AI-Powered Changelog & Release Notes Generator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "gitlog contributors" }]
keywords = ["changelog", "git", "ai", "cli", "release-notes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "litellm>=1.35.0",
    "gitpython>=3.1.40",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "jinja2>=3.1.3",
    "tenacity>=8.2.3",
    "toml>=0.10.2",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
gitlog = "gitlog.cli:app"

[project.urls]
Homepage = "https://github.com/JToSound/LogForge"
Repository = "https://github.com/JToSound/LogForge"
Issues = "https://github.com/JToSound/LogForge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gitlog"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PT", "RET", "SIM"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/gitlog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/gitlog"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
