[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitlog"
version = "0.1.0"
description = "AI-Powered Changelog & Release Notes Generator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "gitlog contributors" }]
keywords = ["changelog", "git", "ai", "llm", "release-notes", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "gitpython>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "litellm>=1.30",
    "jinja2>=3.1",
    "tenacity>=8.2",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-Jinja2",
]

[project.scripts]
gitlog = "gitlog.cli:app"

[project.urls]
Homepage = "https://github.com/JToSound/LogForge"
Repository = "https://github.com/JToSound/LogForge"
Issues = "https://github.com/JToSound/LogForge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gitlog"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/gitlog"]
omit = ["tests/*"]
