[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logforge-gitlog"
version = "0.1.0"
description = "AI-Powered Changelog & Release Notes Generator"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["changelog", "git", "ai", "cli", "release-notes"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "typer[all]>=0.12",
  "rich>=13",
  "gitpython>=3.1",
  "pydantic>=2",
  "pydantic-settings>=2",
  "litellm>=1.40",
  "jinja2>=3.1",
  "tenacity>=8",
  "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "respx>=0.21",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-Jinja2",
]

[project.scripts]
gitlog = "gitlog.cli:app"
logforge = "gitlog.cli:app"

[project.urls]
Homepage = "https://github.com/JToSound/LogForge"
Repository = "https://github.com/JToSound/LogForge"
Changelog = "https://github.com/JToSound/LogForge/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["gitlog"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/gitlog"]
omit = ["tests/*"]
